<resources>
    <string name="app_name">NoteBark</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>


    <string name="pref_title_subject">Subject</string>
    <string name="pref_default_subject">[NoteBark] New Note for you</string>
    <string name="pref_title_recipient">Recipient E-Mail Address</string>
    <string name="pref_default_recipient">johndoe@example.com</string>
    <string name="need_to_record">You need to record something first</string>
    <string name="sendingMessage">Sending Note...</string>
    <string name="pref_default_server">smtp.mailbox.org:465</string>
    <string name="pref_title_server">SMTP Server</string>
    <string name="pref_title_username">SMTP Username</string>
    <string name="pref_title_password">SMTP Password</string>
    <string name="pref_default_sender">johndoe@emample.org</string>
    <string name="pref_title_sender">Sender Address</string>
</resources>
